# pipelines_rj_smfp

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yaml  cd_staging.yaml  metadata_automation.yaml
.github/workflows/scripts/: metadata_automation.py
pipelines/: constants.py  flows.py
pipelines/alvaras/: __init__.py
pipelines/alvaras/dump_db/: flows.py  schedules.py
pipelines/atividade_economica/: __init__.py
pipelines/atividade_economica/dump_db/: flows.py  schedules.py
pipelines/atividade_economica_sinae/: __init__.py
pipelines/atividade_economica_sinae/dump_db/: flows.py  schedules.py
pipelines/dbt_transform/: __init__.py  flows.py  schedules.py
pipelines/egpweb_metas/: __init__.py
pipelines/egpweb_metas/dump_db_metas/: flows.py  schedules.py
pipelines/egpweb_metas/dump_url_metas/: flows.py  schedules.py
pipelines/egpweb_metas/goals_dashboard_dbt/: flows.py  schedules.py
pipelines/ergon/: __init__.py
pipelines/ergon/dump_db_ergon/: flows.py  schedules.py
pipelines/ergon/dump_db_ergon_folha_pagamento/: flows.py  schedules.py
pipelines/ergon/dump_db_ergon_pericia_medica/: flows.py  schedules.py
pipelines/ergon/materializa_brutos_ergon/: flows.py  schedules.py
pipelines/ergon/materializa_funcionarios_saude/: flows.py  schedules.py
pipelines/ergon_comlurb/: __init__.py
pipelines/exemplo/nome_do_objetivo/: flows.py
pipelines/fincon/: __init__.py
pipelines/iptu_inad/: __init__.py
pipelines/receita_federal_cnpj/: __init__.py
pipelines/sigma/: __init__.py
queries/: dbt_project.yml  metadata.json  profiles.yml
(+186 files in other folders)
