[tool.poetry]
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
description = ""
name = "pipelines"
version = "0.1.0"

[tool.poetry.dependencies]
dbt-bigquery = "^1.6.1"
google-cloud-storage = "^2.10.0"
pendulum = "^3.0.0"
prefect = "1.4.1"
prefeitura-rio = {git = "https://github.com/prefeitura-rio/prefeitura-rio", rev = "160482553d61658da753b5da8261f9e993a28a74", extras = [
  "pipelines",
  "pipelines-templates",
  "actions",
]}
python = ">=3.10,<3.11"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
taskipy = "^1.12.0"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
loguru = "^0.7.0"
networkx = "^3.1"
typer = "^0.9.0"

[tool.black]
include = "\\.pyi?$"
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black . && isort . && flake8 ."

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
